npm updates and switch to eslint

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -3,20 +3,40 @@
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner</title>
+  <link rel="shortcut icon" type="image/png" href=".grunt/grunt-contrib-jasmine/jasmine_favicon.png">
 
   <link rel="stylesheet" type="text/css" href=".grunt/grunt-contrib-jasmine/jasmine.css">
 
 
+</head>
+<body>
+
   
-  <script src=".grunt/grunt-contrib-jasmine/phantom-polyfill.js"></script>
+  <script src=".grunt/grunt-contrib-jasmine/es5-shim.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/jasmine.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/jasmine-html.js"></script>
   
+  <script src=".grunt/grunt-contrib-jasmine/json2.js"></script>
+  
+  <script src=".grunt/grunt-contrib-jasmine/boot.js"></script>
+  
   <script src="src/app/tests/jasmineTestBootstrap.js"></script>
   
   <script src="src/app/run.js"></script>
+  
+  <script src="src/app/tests/spec/Spec_AddBtnMixin.js"></script>
+  
+  <script src="src/app/tests/spec/Spec_ClearValuesMixin.js"></script>
+  
+  <script src="src/app/tests/spec/Spec_GeoDefMixin.js"></script>
+  
+  <script src="src/app/tests/spec/Spec_GridMixin.js"></script>
+  
+  <script src="src/app/tests/spec/Spec_MultipleWidgetsWithAddBtnMixin.js"></script>
+  
+  <script src="src/app/tests/spec/Spec_SubmitJobMixin.js"></script>
   
   <script src="src/app/tests/spec/SpecApp.js"></script>
   
@@ -78,24 +98,8 @@
   
   <script src="src/app/tests/spec/SpecVerifyMap.js"></script>
   
-  <script src="src/app/tests/spec/Spec_AddBtnMixin.js"></script>
-  
-  <script src="src/app/tests/spec/Spec_ClearValuesMixin.js"></script>
-  
-  <script src="src/app/tests/spec/Spec_GeoDefMixin.js"></script>
-  
-  <script src="src/app/tests/spec/Spec_GridMixin.js"></script>
-  
-  <script src="src/app/tests/spec/Spec_MultipleWidgetsWithAddBtnMixin.js"></script>
-  
-  <script src="src/app/tests/spec/Spec_SubmitJobMixin.js"></script>
-  
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
   
-  <script src=".grunt/grunt-contrib-jasmine/jasmine-helper.js"></script>
-  
 
-</head>
-<body>
 </body>
 </html>
