create packages.js and css imports for deps

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
 
     <!-- CSS -->
     <!-- bootstrap .css files do not play nice with the dojo build system -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
     <link rel='stylesheet' href='app/resources/App.css'>
 </head>
 <body class='claro'>
-    <div data-dojo-type='app.App'></div>
+    <div data-dojo-type='app/App'></div>
 
     <!-- JAVASCRIPT -->
     <script data-dojo-config='isDebug: 1' src='dojo/dojo.js'></script>
+    <script src='app/packages.js'></script>
     <script src='app/run.js'></script>
 
     <!-- GOOGLE ANALYTICS -->
