--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -24,6 +24,8 @@
   
   <script src="src/app/tests/jasmineTestBootstrap.js"></script>
   
+  <script src="src/dojo/dojo.js"></script>
+  
   <script src="src/app/run.js"></script>
   
   <script src="src/app/tests/spec/Spec_AddBtnMixin.js"></script>
