--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -22,11 +22,21 @@
   
   <script src=".grunt/grunt-contrib-jasmine/boot.js"></script>
   
+  <script src="src/jasmine-favicon-reporter/vendor/favico.js"></script>
+  
+  <script src="src/jasmine-favicon-reporter/jasmine-favicon-reporter.js"></script>
+  
+  <script src="src/jasmine-jsreporter/jasmine-jsreporter.js"></script>
+  
   <script src="src/app/tests/jasmineTestBootstrap.js"></script>
   
   <script src="src/dojo/dojo.js"></script>
   
-  <script src="src/app/run.js"></script>
+  <script src="src/app/packages.js"></script>
+  
+  <script src="src/app/tests/jsReporterSanitizer.js"></script>
+  
+  <script src="src/app/tests/jasmineAMDErrorChecking.js"></script>
   
   <script src="src/app/tests/spec/Spec_AddBtnMixin.js"></script>
   
