Submit correct numeric types
Fixes #13

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -48,6 +48,8 @@
   
   <script src="src/app/tests/spec/Spec_GridMixin.js"></script>
   
+  <script src="src/app/tests/spec/Spec_helpers.js"></script>
+  
   <script src="src/app/tests/spec/Spec_MultipleWidgetsWithAddBtnMixin.js"></script>
   
   <script src="src/app/tests/spec/Spec_SubmitJobMixin.js"></script>
