--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <!-- bootstrap .css files do not play nice with the dojo build system -->
     <link rel='stylesheet' href='app/resources/App.css'>
+    <!-- leaflet.css does not play nice with the dojo build system -->
+    <link rel='stylesheet' href='leaflet/dist/leaflet.css'>
 </head>
 <body class='claro'>
     <div data-dojo-type='app/App'></div>
 
-    <!-- JAVASCRIPT -->
+    <!-- build:template
+    <script data-dojo-config="deps:['app/packages', 'app/run']" src='dojo/dojo.js'></script>
+    /build -->
+
+    <!-- build:remove -->
     <script data-dojo-config='isDebug: 1' src='dojo/dojo.js'></script>
     <script src='app/packages.js'></script>
     <script src='app/run.js'></script>
+    <!-- /build -->
 
     <!-- GOOGLE ANALYTICS -->
     <script type='text/javascript'>
