local caching for text boxes and textareas
Add localforage
Create mixin for caching in progress data.

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -50,6 +50,8 @@
   
   <script src="src/app/tests/spec/Spec_helpers.js"></script>
   
+  <script src="src/app/tests/spec/Spec_InProgressCacheMixin.js"></script>
+  
   <script src="src/app/tests/spec/Spec_MultipleWidgetsWithAddBtnMixin.js"></script>
   
   <script src="src/app/tests/spec/Spec_SubmitJobMixin.js"></script>
