update changelog format
closes #19

--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wildlife App Changelog</title>
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css"/>
+	<title>Electrofishing App Changelog</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css"/>
 
     <style type="text/css">
         body {
@@ -11,7 +11,10 @@
     </style>
 </head>
 <body>
-    <h1>Wildlife App Changelog</h1>
+    <h1>Electrofishing App Changelog</h1>
+    <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+
     <h4>1.1.0 <small>Sept 20, 2016</small></h4>
     <ul>
         <li>Upgraded all 3rd party libraries to their latest versions.</li>
