--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Electrofishing App Changelog</title>
+    <title>Electrofishing App Changelog</title>
     <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css"/>
 
     <style type="text/css">
@@ -12,9 +12,23 @@
 </head>
 <body>
     <h1>Electrofishing App Changelog</h1>
-    <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
 
+    <h4>1.2.0 <small>Nov 7, 2016</small></h4>
+    <ul>
+        <li>Fixed a bug preventing the more info dialog from opening after submitting a report (<a href='https://github.com/agrc/electrofishing/issues/14'>#14</a>).</li>
+        <li>Upgraded Leaflet (mapping library) to v1.</li>
+        <li>Added DWR streams & lakes layers (<a href='https://github.com/agrc/electrofishing/issues/11'>#11</a>).</li>
+        <li>Implemented local caching of all in progress and submitted report data (<a href='https://github.com/agrc/electrofishing/issues/29'>#29</a>).</li>
+        <li>Upgraded change log format (<a href='https://github.com/agrc/electrofishing/issues/19'>#19</a>).</li>
+        <li>Fixed bug causing the stream search box to overlap all other components (<a href='https://github.com/agrc/electrofishing/issues/28'>#28</a>).</li>
+        <li>Clear anode shape when selecting raft equipment type (<a href='https://github.com/agrc/electrofishing/issues/23'>#23</a>).</li>
+        <li>Better styling of the verify location button and related error message (<a href='https://github.com/agrc/electrofishing/issues/27'>#27</a>).</li>
+        <li>Made the additional notes text area larger (<a href='https://github.com/agrc/electrofishing/issues/27'>#27</a>).</li>
+        <li>Split habitat page into columns to better use screen real estate (<a href='https://github.com/agrc/electrofishing/issues/27'>#27</a>).</li>
+        <li>Remember species and length type on new row added (<a href='https://github.com/agrc/electrofishing/issues/25'>#25</a>).</li>
+        <li>Better error messages when verifying locations (<a href='https://github.com/agrc/electrofishing/issues/22'>#22</a>).</li>
+    </ul>
     <h4>1.1.0 <small>Sept 20, 2016</small></h4>
     <ul>
         <li>Upgraded all 3rd party libraries to their latest versions.</li>
