Show summary report on submit
Closes #10

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -96,6 +96,8 @@
   
   <script src="src/app/tests/spec/SpecStreamSearch.js"></script>
   
+  <script src="src/app/tests/spec/SpecSummaryReport.js"></script>
+  
   <script src="src/app/tests/spec/SpecTag.js"></script>
   
   <script src="src/app/tests/spec/SpecTagsContainer.js"></script>
