--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -14,6 +14,13 @@
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
 
+    <h4>1.3.0 <small>Nov 14, 2016</small></h4>
+    <ul>
+        <li>Rework batch workflow so that you enter rows first (including optional lengths) then batch weight (<a href='https://github.com/agrc/electrofishing/issues/7'>#7</a>).</li>
+        <li>Fixed but causing the batch drop down to be visible after switching to a new tab (<a href='https://github.com/agrc/electrofishing/issues/20'>#20</a>).</li>
+        <li>Added a summary of the count of fish per pass by species that is displayed before the report is submitted to the server (<a href='https://github.com/agrc/electrofishing/issues/10'>#10</a>).</li>
+        <li>Hide the success message after submitting a report after 5 seconds (<a href='https://github.com/agrc/electrofishing/issues/24'>#24</a>).</li>
+    </ul>
     <h4>1.2.0 <small>Nov 7, 2016</small></h4>
     <ul>
         <li>Fixed a bug preventing the more info dialog from opening after submitting a report (<a href='https://github.com/agrc/electrofishing/issues/14'>#14</a>).</li>
