--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -13,7 +13,28 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
-
+    <h4>1.4.0 <small>March 22, 2018</small></h4>
+    <ul>
+        <li>Add units of measurement and new fields to Habitat tab (<a href="https://github.com/agrc/electrofishing/issues/60">#60</a>).</li>
+        <li>Add Additional Fields to Equipment Tab (<a href="https://github.com/agrc/electrofishing/issues/43">#43</a>).</li>
+        <li>Allow submissions with no fish entered (<a href="https://github.com/agrc/electrofishing/issues/79">#79</a>).</li>
+        <li>Go to Location tab after successful report submission (<a href="https://github.com/agrc/electrofishing/issues/81">#81</a>).</li>
+        <li>Add additional fields to Location Tab (<a href="https://github.com/agrc/electrofishing/issues/45">#45</a>).</li>
+        <li>Add "Hard Body Part Collection" to Fish Dialog (<a href="https://github.com/agrc/electrofishing/issues/44">#44</a>).</li>
+        <li>Diet Tab unit tweaks (<a href="https://github.com/agrc/electrofishing/issues/52">#52</a>).</li>
+        <li>Switch Over/Under-story Domains (<a href="https://github.com/agrc/electrofishing/issues/78">#78</a>).</li>
+        <li>Additional Tag Types (<a href="https://github.com/agrc/electrofishing/issues/73">#73</a>).</li>
+        <li>Add asterisks (*) to all fields required for submission (<a href="https://github.com/agrc/electrofishing/issues/58">#58</a>).</li>
+        <li>Add "Survey Purpose" to Method Tab (<a href="https://github.com/agrc/electrofishing/issues/59">#59</a>).</li>
+        <li>Remove "No Weight" and "Too Small" buttons (<a href="https://github.com/agrc/electrofishing/issues/46">#46</a>).</li>
+        <li>Remove Voltage from required fields list (<a href="https://github.com/agrc/electrofishing/issues/80">#80</a>).</li>
+        <li>Change coordinate box layout orientation to horizontal (<a href="https://github.com/agrc/electrofishing/issues/57">#57</a>).</li>
+        <li>Focus the last row in the grid after the "Delete" button is pressed (<a href="https://github.com/agrc/electrofishing/issues/51">#51</a>).</li>
+        <li>Delete button should not remove the last row (<a href="https://github.com/agrc/electrofishing/issues/50">#50</a>).</li>
+        <li>Radio Button Group Contrast (<a href="https://github.com/agrc/electrofishing/issues/68">#68</a>).</li>
+        <li>Increase the weight of %3Chr%3E tags (<a href="https://github.com/agrc/electrofishing/issues/64">#64</a>).</li>
+        <li>Increase number of matches shown on stream map search (<a href="https://github.com/agrc/electrofishing/issues/55">#55</a>).</li>
+    </ul>
     <h4>1.3.0 <small>Nov 14, 2016</small></h4>
     <ul>
         <li>Rework batch workflow so that you enter rows first (including optional lengths) then batch weight (<a href='https://github.com/agrc/electrofishing/issues/7'>#7</a>).</li>
