--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -13,6 +13,14 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.4.1 <small>April 5, 2018</small></h4>
+    <ul>
+        <li>Move 'Survey Purpose' to Location tab (<a href="https://github.com/agrc/electrofishing/issues/110">#110</a>).</li>
+        <li>Increase number of matches shown on map search (<a href="https://github.com/agrc/electrofishing/issues/117">#117</a>).</li>
+        <li>Rename a selection choice in a domain list (<a href="https://github.com/agrc/electrofishing/issues/120">#120</a>).</li>
+        <li>Allow for one decimal point in 'pH' field (<a href="https://github.com/agrc/electrofishing/issues/114">#114</a>).</li>
+        <li>Increase upper threshold of values in the '# Netters' field (<a href="https://github.com/agrc/electrofishing/issues/112">#112</a>).</li>
+    </ul>
     <h4>1.4.0 <small>March 22, 2018</small></h4>
     <ul>
         <li>Add units of measurement and new fields to Habitat tab (<a href="https://github.com/agrc/electrofishing/issues/60">#60</a>).</li>
