--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,17 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.5.0 <small>May 17, 2018</small></h4>
+    <ul>
+        <li>Swapped over/understory pick lists (<a href="https://github.com/agrc/electrofishing/issues/122">#122</a>).</li>
+        <li>Add Megahertz field to Tags tab in Fish dialog (<a href="https://github.com/agrc/electrofishing/issues/72">#72</a>).</li>
+        <li>Overwrite all codes with descriptions for domains (<a href="https://github.com/agrc/electrofishing/issues/97">#97</a>).</li>
+        <li>Add Transect Grid to Habitat Tab (<a href="https://github.com/agrc/electrofishing/issues/54">#54</a>).</li>
+        <li>Refactor Anode-related Fields (<a href="https://github.com/agrc/electrofishing/issues/62">#62</a>).</li>
+        <li>Added support for bulk data upload for catch data only via CSV (<a href="https://github.com/agrc/electrofishing/issues/82">#82</a>).</li>
+        <li>Fix bug causing "NaN" to show up as a value for empty numeric grid cells (<a href="https://github.com/agrc/electrofishing/issues/119">#119</a>).</li>
+        <li>Fixed bug causing a neverending loop when selecting "[other]" within a grid drop down (<a href="https://github.com/agrc/electrofishing/issues/75">#75</a>).</li>
+    </ul>
     <h4>1.4.1 <small>April 5, 2018</small></h4>
     <ul>
         <li>Move 'Survey Purpose' to Location tab (<a href="https://github.com/agrc/electrofishing/issues/110">#110</a>).</li>
