--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,23 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.6.0 <small>May 25, 2018</small></h4>
+    <ul>
+        <li>Better clean up on report cancel</li>
+        <li>Upgrade the esri-leaflet and leaflet libraries to their latest versions.</li>
+        <li>Update Transmitter Freq field to be type=number</li>
+        <li>Fix a bug related to adding notes to fish.</li>
+        <li>Eliminate duplicate requests to the server for domain lists (<a href="https://github.com/agrc/electrofishing/issues/96">#96</a>).</li>
+        <li>Add a minus button to allow users to remove catch passes and transects.</li>
+        <li>Add a better error message when bad stream data causes the location verification to fail (<a href="https://github.com/agrc/electrofishing/issues/123">#123</a>).</li>
+        <li>Add decimals to Bankful Width and Wetted Width fields (<a href="https://github.com/agrc/electrofishing/issues/151">#151</a>).</li>
+        <li>Remove "(kHz)" from Transmitter Freq. field (<a href="https://github.com/agrc/electrofishing/issues/150">#150</a>).</li>
+        <li>Add units and increase upper limit to 3000 for Turbidity Field (<a href="https://github.com/agrc/electrofishing/issues/149">#149</a>).</li>
+        <li>Remove Vegetation Density Field (<a href="https://github.com/agrc/electrofishing/issues/148">#148</a>).</li>
+        <li>Increase max value for Cathode Length field from 121 to 305 (<a href="https://github.com/agrc/electrofishing/issues/145">#145</a>).</li>
+        <li>Remove upper limit for Backwater Area field (<a href="https://github.com/agrc/electrofishing/issues/143">#143</a>).</li>
+        <li>Add additional required fields to Location tab (<a href="https://github.com/agrc/electrofishing/issues/118">#118</a>).</li>
+    </ul>
     <h4>1.5.0 <small>May 17, 2018</small></h4>
     <ul>
         <li>Swapped over/understory pick lists (<a href="https://github.com/agrc/electrofishing/issues/122">#122</a>).</li>
