--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,19 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.7.0 <small>June 7, 2018</small></h4>
+    <ul>
+        <li>Add a confirmation alert when deleting a pass or transect (<a href="https://github.com/agrc/electrofishing/issues/154">#154</a>).</li>
+        <li>Fix a bug preventing the submission of reports (<a href="https://github.com/agrc/electrofishing/issues/155">#155</a>).</li>
+        <li>Better clean up of "More Info" dialog data when a fish is deleted.</li>
+        <li>Prevent new rows from being added to the Anode grid by tabbing (<a href="https://github.com/agrc/electrofishing/issues/140">#140</a>).</li>
+        <li>Add validation between the wetted width and starting bank values (<a href="https://github.com/agrc/electrofishing/issues/146">#146</a>).</li>
+        <li>Moved required splats (*) to headers for Station and Stream Reach (<a href="https://github.com/agrc/electrofishing/issues/118">#118</a>).</li>
+        <li>Add new "Count" column to catch grid preventing the need for entering duplicate rows (<a href="https://github.com/agrc/electrofishing/issues/49">#49</a>).</li>
+        <li>Fix a bug causing up and down arrows to skip rows in grids.</li>
+        <li>Fix a bug causing the right arrow to skip the Species column in the catch grid.</li>
+        <li>Switch "Measurement" column in the more info diet tab grid from text to numeric input (min: 0, no max) (<a href="https://github.com/agrc/eletrofishing/issues/156">#156</a>).</li>
+    </ul>
     <h4>1.6.0 <small>May 25, 2018</small></h4>
     <ul>
         <li>Better clean up on report cancel</li>
