--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,12 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.7.1 <small>June 12, 2018</small></h4>
+    <ul>
+        <li>Fix bug preventing reports from being submitted (<a href="https://github.com/agrc/electrofishing/issues/164">#164</a>).</li>
+        <li>Fix bug causing incorrect fields to be shown in the Equipment tab (<a href="https://github.com/agrc/electrofishing/issues/142">#142</a>).</li>
+        <li>Pre-populate field values when adding new equipments (<a href="https://github.com/agrc/electrofishing/issues/66">#66</a>).</li>
+    </ul>
     <h4>1.7.0 <small>June 7, 2018</small></h4>
     <ul>
         <li>Add a confirmation alert when deleting a pass or transect (<a href="https://github.com/agrc/electrofishing/issues/154">#154</a>).</li>
