--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,12 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.8.0 <small>June 14, 2018</small></h4>
+    <ul>
+        <li>Fix bugs related to persistent caching of inprogress data.</li>
+        <li>Moved "Anode Shape" into the anode grid (<a href="https://github.com/agrc/electrofishing/issues/141">#141</a>).</li>
+        <li>Fixed bug preventing some fields in the Location tab from being cleared on a successful report submission or the cancel button being pressed (<a href="https://github.com/agrc/electrofishing/issues/167">#167</a>).</li>
+    </ul>
     <h4>1.7.1 <small>June 12, 2018</small></h4>
     <ul>
         <li>Fix bug preventing reports from being submitted (<a href="https://github.com/agrc/electrofishing/issues/164">#164</a>).</li>
