--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,14 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.8.1 <small>June 26, 2018</small></h4>
+    <ul>
+        <li>Confirm that bulk data upload works with a "COUNT" field and updated test data accordingly.</li>
+        <li>Better error messages in some areas.</li>
+        <li>Removed the skipping of the "COUNT" field in the Catch tab when tabbing with the keyboard (<a href="https://github.com/agrc/electrofishing/issues/170">#170</a>).</li>
+        <li>Remove the minus button for pass and transect grid tabs (<a href="https://github.com/agrc/electrofishing/issues/171">#171</a>).</li>
+        <li>Better scrolling to make the successful submit message visible and added a "Done" button (<a href="https://github.com/agrc/electrofishing/issues/172">#172</a>).</li>
+    </ul>
     <h4>1.8.0 <small>June 14, 2018</small></h4>
     <ul>
         <li>Fix bugs related to persistent caching of inprogress data.</li>
