--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.8.2 <small>Aug 1, 2019</small></h4>
+    <ul>
+        <li>Tweaks for deployment on DWR server (<a href="https://github.com/agrc/electrofishing/issues/196">#196</a>).</li>
+    </ul>
     <h4>1.8.1 <small>June 26, 2018</small></h4>
     <ul>
         <li>Confirm that bulk data upload works with a "COUNT" field and updated test data accordingly.</li>
