--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,18 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.9.0 <small>Sep 26, 2019</small></h4>
+    <ul>
+        <li>Link streams & lakes with stations (<a href="https://github.com/agrc/electrofishing/issues/195">#195</a>).</li>
+        <li>
+            <ul>
+                <li>Move streams/lakes to SDE database and associated create relationship classes with the Stations feature class.</li>
+                <li>Add stream/lakes selection to new station dialog and make it required.</li>
+            </ul>
+        </li>
+        <li>Fix bug causing multiple equipment items to have duplicate guids (<a href="https://github.com/agrc/electrofishing/issues/197">#197</a>).</li>
+        <li>Add "Water Id" to station marker popup (<a href="https://github.com/agrc/electrofishing/issues/56">#56</a>).</li>
+    </ul>
     <h4>1.8.2 <small>Aug 1, 2019</small></h4>
     <ul>
         <li>Tweaks for deployment on DWR server (<a href="https://github.com/agrc/electrofishing/issues/196">#196</a>).</li>
