--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.9.1 <small>Oct 28, 2019</small></h4>
+    <ul>
+        <li>Remove permanent id field from station popup (<a href="https://github.com/agrc/electrofishing/issues/56">#56</a>).</li>
+    </ul>
     <h4>1.9.0 <small>Sep 26, 2019</small></h4>
     <ul>
         <li>Link streams & lakes with stations (<a href="https://github.com/agrc/electrofishing/issues/195">#195</a>).</li>
