--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>1.9.5 <small>Apr 30, 2020</small></h4>
+    <ul>
+        <li>Fix bug causing bulk uploads with decimal numeric values to fail.</li>
+    </ul>
     <h4>1.9.4 <small>Apr 23, 2020</small></h4>
     <ul>
         <li>Fix bug related to multiple reports being submitted simultaneously.</li>
