chore: enable incremental adoption of React
Related to #224

--- a/_src/index.html
+++ b/_src/index.html
@@ -16,10 +16,14 @@
     <div data-dojo-type='app/App'></div>
 
     <!-- build:template
+    <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
     <script data-dojo-config="deps:['app/packages', 'app/run']" src='dojo/dojo.js'></script>
     /build -->
 
     <!-- build:remove -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     <script data-dojo-config='isDebug: 1' src='dojo/dojo.js'></script>
     <script src='app/packages.js'></script>
     <script src='app/run.js'></script>
