fix: add css (via sass) solution for react components

--- a/_src/index.html
+++ b/_src/index.html
@@ -9,6 +9,7 @@
 
     <!-- CSS -->
     <link rel='stylesheet' href='app/resources/App.css'>
+    <link rel='stylesheet' href='react-app/index.css'>
     <!-- leaflet.css does not play nice with the dojo build system -->
     <link rel='stylesheet' href='leaflet/dist/leaflet.css'>
 </head>
