--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,2 +1,4 @@
-<link rel='stylesheet' href='http://localhost:8000/src/app/resources/App.css'>
-<link rel='stylesheet' href='http://localhost:8000/src/react-app/index.css'>
+<link rel='stylesheet' href='/app/resources/App.css'>
+<link rel='stylesheet' href='/react-app/index.css'>
+<script src='jquery/dist/jquery.js'></script>
+<script src='bootstrap/dist/js/bootstrap.js'></script>
