wip: switch to top-down approach for converting to react components

--- a/_src/index.html
+++ b/_src/index.html
@@ -10,11 +10,9 @@
     <!-- CSS -->
     <link rel='stylesheet' href='app/resources/App.css'>
     <link rel='stylesheet' href='react-app/index.css'>
-    <!-- leaflet.css does not play nice with the dojo build system -->
-    <link rel='stylesheet' href='leaflet/dist/leaflet.css'>
 </head>
 <body class='claro'>
-    <div data-dojo-type='app/App'></div>
+    <div id="root"></div>
 
     <!-- build:template
     <script data-dojo-config="deps:['app/packages', 'app/run']" src='dojo/dojo.js'></script>
