--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,25 @@
   <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>2.0.0 <small>??, 2020</small></h4>
+    <ul>
+      <li>
+        Begin incremental removal of Dojo and adoption of React (<a
+          href="https://github.com/agrc/electrofishing/issues/232"
+          >#232</a
+        >).
+      </li>
+      <li>Make header more responsive in smaller layouts</li>
+      <li>Upgrade most development tooling to more current tools.</li>
+      <li>Remove new station gp service and hit feature service directly instead.</li>
+      <li>
+        Return actual error message from server on failed submissions (<a
+          href="https://github.com/agrc/electrofishing/issues/240"
+          >#240</a
+        >).
+      </li>
+      <li>Restrict free type text boxes to the number of characters of the corresponding database field.</li>
+    </ul>
     <h4>1.9.5 <small>Apr 30, 2020</small></h4>
     <ul>
       <li>Fix bug causing bulk uploads with decimal numeric values to fail.</li>
