--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -15,6 +15,7 @@
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
     <h4>2.0.0 <small>??, 2021</small></h4>
     <ul>
+      <li>Point to GIS services on the WRI machines.</li>
       <li>
         Begin incremental removal of Dojo and adoption of React (<a
           href="https://github.com/agrc/electrofishing/issues/232"
