--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -15,6 +15,7 @@
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
     <h4>2.0.0 <small>??, 2021</small></h4>
     <ul>
+      <li>Switch to Firebase hosting and new domains.</li>
       <li>Point to GIS services on the WRI machines.</li>
       <li>
         Begin incremental removal of Dojo and adoption of React (<a
@@ -23,7 +24,7 @@
         >).
       </li>
       <li>Make header more responsive in smaller layouts</li>
-      <li>Upgrade most development tooling to more current tools.</li>
+      <li>Upgrade most development tooling to more current packages.</li>
       <li>Remove new station gp service and hit feature service directly instead.</li>
       <li>
         Return actual error message from server on failed submissions (<a
