--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
-    <h4>2.0.0 <small>??, 2022</small></h4>
+    <h4>2.0.0 <small>May 2, 2022</small></h4>
     <ul>
       <li>Switch to Firebase hosting and new domains.</li>
       <li>Point to GIS services on the WRI machines.</li>
