chore: update changelog for v2.0.1

--- a/_src/ChangeLog.html
+++ b/_src/ChangeLog.html
@@ -13,6 +13,11 @@
   <body>
     <h1>Electrofishing App Changelog</h1>
     <a href="https://github.com/agrc/electrofishing/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h4>2.0.1 <small>??, 2022</small></h4>
+    <ul>
+      <li>Fix bug preventing newly created station from being selected on event map</li>
+      <li>Refresh expired access tokens (<a href="https://github.com/agrc/electrofishing/issues/262">#262</a>).</li>
+    </ul>
     <h4>2.0.0 <small>May 2, 2022</small></h4>
     <ul>
       <li>Switch to Firebase hosting and new domains.</li>
