feat: add analytics

--- a/index.html
+++ b/index.html
@@ -12,4 +12,14 @@
     <div id="root"></div>
     <script type="module" src="src/main.jsx"></script>
   </body>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9XC2Y0XHVK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-9XC2Y0XHVK');
+  </script>
 </htmlu>
